apps/skel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <app-name>-ingress
  namespace: <namespace>
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # cert-manager will use the cluster issuer to create TLS certs
    cert-manager.io/cluster-issuer: "local-selfsigned"
  labels:
    app.kubernetes.io/part-of: gitops
spec:
  tls:
    - hosts:
        - <host.example.com>
      secretName: <app-name>-tls
  rules:
    - host: <host.example.com>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <app-name>
                port:
                  number: 80
